--- a/.github/workflows/docker-manual-build.yml
+++ b/.github/workflows/docker-manual-build.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Dockerhub
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
