👷 ci(docker): 更新Docker构建配置
- 添加构建参数NEXT_GENERATE_ENV以支持环境变量生成
- 修改next-env.d.ts文件复制规则以支持可选文件

📦 build(dockerfile): 优化文件复制规则

- 更新next-env.d.ts复制模式以匹配不同文件扩展名

--- a/.github/workflows/docker-manual-build.yml
+++ b/.github/workflows/docker-manual-build.yml
@@ -27,3 +27,5 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/maimai-website:amd64-latest
+        build-args: |
+          NEXT_GENERATE_ENV=1
