--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
